# 3rdparty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: spider_out.mtl
cmake/modules/: imgui.cmake  imguizmo.cmake  stb.cmake
src/: CMakeLists.txt  test_assimp.cpp  test_freetype.cpp  test_glad.cpp  test_glfw.cpp  test_imgui.cpp  test_imguizmo.cpp  test_json.cpp  test_spdlog.cpp  test_stb.cpp
src/assets/: spider_out.mtl
