cmake_minimum_required(VERSION 3.19)

project(ThirdParty)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
set(CMAKE_DEBUG_POSTFIX "_d")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

set(THIRD_PARTY_DIR "ThirdParty")

if(NOT TARGET glad)
    set(GLAD_SOURCES_DIR ${PROJECT_SOURCE_DIR}/glad)
    add_subdirectory(${GLAD_SOURCES_DIR}/cmake glad_cmake)
    glad_add_library(glad REPRODUCIBLE API gl:core=4.6)
    set_target_properties(glad PROPERTIES FOLDER ${THIRD_PARTY_DIR}/glad)
endif()

if(NOT TARGET glfw)
    option(GLFW_BUILD_EXAMPLES "" OFF)
    option(GLFW_BUILD_TESTS "" OFF)
    option(GLFW_BUILD_DOCS "" OFF)
    option(GLFW_INSTALL "" OFF)
    add_subdirectory(glfw)
    set_target_properties(glfw PROPERTIES FOLDER ${THIRD_PARTY_DIR}/glfw)
    set_target_properties(update_mappings PROPERTIES FOLDER ${THIRD_PARTY_DIR}/glfw)
endif()

if(NOT TARGET glm)
    option(BUILD_STATIC_LIBS "" ON)
    option(BUILD_TESTING "" OFF)
    option(GLM_TEST_ENABLE "" OFF)
    add_subdirectory(glm)
    set_target_properties(glm_static PROPERTIES FOLDER ${THIRD_PARTY_DIR}/glm)
endif()

if(NOT TARGET imgui)
    include(imgui)
    set_target_properties(imgui PROPERTIES FOLDER ${THIRD_PARTY_DIR}/imgui)
endif()

if(NOT TARGET stb)
    include(stb)
    set_target_properties(stb PROPERTIES FOLDER ${THIRD_PARTY_DIR}/stb)
endif()

option(BUILD_TEST "Build test" OFF)
if(BUILD_TEST)
    add_subdirectory(src)
endif()
